[lab3] api architecture
