# internal/pkg/app/server.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"log"
 	"net/http"
+	"strconv"
 	"web-2022/internal/app/ds"
 	"web-2022/swagger/models"
 )
@@ -14,6 +15,7 @@ func (a *Application) StartServer() {
 	r := gin.Default()
 
 	r.GET("/cars", a.GetList)
+	r.GET("/cars/price", a.GetCarPrice)
 
 	r.POST("/cars/create", a.AddCar)
 
@@ -50,28 +52,94 @@ func (a *Application) GetList(gCtx *gin.Context) {
 
 }
 
+// GetCarPrice ist godoc
+// @Summary      Get price for a car
+// @Description  Get a price via uuid of a car
+// @Tags         Info
+// @Produce      json
+// @Param UUID query string true "UUID машины"
+// @Success      200  {object}  models.ModelCarPrice
+// @Failure 	 500 {object} models.ModelError
+// @Router       /cars/price [get]
+func (a *Application) GetCarPrice(gCtx *gin.Context) {
+	uuid := gCtx.Query("UUID")
+	resp, err := a.repo.GetCarPrice(uuid)
+	if err != nil {
+		gCtx.JSON(
+			http.StatusInternalServerError,
+			&models.ModelError{
+				Description: "can`t get a list",
+				Error:       "db error",
+				Type:        "internal",
+			})
+		return
+	}
+
+	gCtx.JSON(
+		http.StatusOK,
+		&models.ModelCarPrice{
+			Price: strconv.FormatUint(resp, 10),
+		})
+
+}
+
 // AddCar godoc
 // @Summary      Add a new car
 // @Description  Adding a new car to database
 // @Tags         Add
 // @Produce      json
-// @Success      200  {object}  ds.Car
+// @Param Name query string true "Название машины"
+// @Param SalePrice query uint64 true "Цена машины"
+// @Param Year query uint64 true "Год производства"
+// @Param EngineType query string true "Тип двигателя"
+// @Param EngineVolume query float64 true "Объем двигателя"
+// @Param Power query uint64 true "Кол-во л.с."
+// @Param Gearbox query string true "Тип коробки передач"
+// @Param TypeOfDrive query string true "Привод"
+// @Param Color query string false "Цвет"
+// @Param Mileage query uint64 true "Пробег"
+// @Param Wheel query string false "Расположение руля"
+// @Param Description query string false "Описание"
+// @Success      201  {object}  models.ModelCarCreated
 // @Failure 500 {object} models.ModelError
-// @Router       /cars [get]
+// @Router       /cars/create [Post]
 func (a *Application) AddCar(gCtx *gin.Context) {
-	car := &ds.Car{
-		Name:         "",
-		SalePrice:    0,
-		Year:         0,
-		EngineType:   "",
-		EngineVolume: 0,
-		Power:        0,
-		Gearbox:      "",
-		TypeOfDrive:  "",
-		Color:        "",
-		Mileage:      0,
-		Wheel:        "",
-		Description:  "",
+	salePrice, _ := strconv.ParseUint(gCtx.Query("SalePrice"), 10, 64)
+	year, _ := strconv.ParseUint(gCtx.Query("Year"), 10, 64)
+	engineVolume, _ := strconv.ParseFloat(gCtx.Query("EngineVolume"), 64)
+	power, _ := strconv.ParseUint(gCtx.Query("Power"), 10, 64)
+	mileage, _ := strconv.ParseUint(gCtx.Query("Mileage"), 10, 64)
+
+	car := ds.Car{
+		Name:         gCtx.Query("Name"),
+		SalePrice:    salePrice,
+		Year:         year,
+		EngineType:   gCtx.Query("EngineType"),
+		EngineVolume: engineVolume,
+		Power:        power,
+		Gearbox:      gCtx.Query("Gearbox"),
+		TypeOfDrive:  gCtx.Query("TypeOfDrive"),
+		Color:        gCtx.Query("Color"),
+		Mileage:      mileage,
+		Wheel:        gCtx.Query("Wheel"),
+		Description:  gCtx.Query("Description"),
 	}
+
+	err := a.repo.AddCar(car)
+	if err != nil {
+		gCtx.JSON(
+			http.StatusInternalServerError,
+			&models.ModelError{
+				Description: "can`t get a list",
+				Error:       "db error",
+				Type:        "internal",
+			})
+		return
+	}
+	gCtx.JSON(
+		http.StatusOK,
+		&models.ModelCarCreated{
+			Success: true,
+		})
 
 }
