# swagger/models/model_car_price.go
@@ -1,0 +1,5 @@
+package models
+
+type ModelCarPrice struct {
+	Price string `json:"price,omitempty"`
+}
